--- a/templates/index.html
+++ b/templates/index.html
@@ -22,32 +22,76 @@
 
 </div>
 <div class="body-content container container-fluid row">
-    <div class="homepage">
-        <div class="main">
+    <div class="homepage raw">
+        <div class="main float-left col-8">
             <h1>Django 中文社区即将上线</h1>
             <div class="progress progress-striped">
                 <div class="progress-bar progress-bar-success" role="progressbar"
                      aria-valuemin="0" aria-valuemax="100"
-                     style="width: 70%;">
+                     style="width:{{ progress }}%;">
                 </div>
 
             </div>
+            <h4>完成度&nbsp;&nbsp;&nbsp;{{ progress }}%</h4>
             <p class="github-wrapper">
-                <a class="button gray has-icon github-button" href="https://github.com/DjangoChinaOrg" target="_blank">GITHUB</a>
+                <a class="button gray has-icon github-button" href="https://github.com/DjangoChinaOrg/django-china.org"
+                   target="_blank">GITHUB</a>
             </p>
 
-            <div class="donate row">
-                <div class="col-6">
-                    <img src="{% static 'img/QRCode.png' %}">
-                </div>
-                <div class="col-6 wrapper">
-                    <span>欢迎捐助<br>为社区发展贡献一份力</span>
+            <div class="donate">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                             aria-orientation="vertical">
+                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
+                               role="tab" aria-controls="v-pills-home" aria-selected="true">微信</a>
+                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
+                               role="tab" aria-controls="v-pills-profile" aria-selected="false">支付宝</a>
+                            <!--<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages"-->
+                               <!--role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>-->
+                            <!--<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings"-->
+                               <!--role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>-->
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="tab-content" id="v-pills-tabContent">
+                            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                                 aria-labelledby="v-pills-home-tab">
+                                <img src="{% static 'img/WeChatQRCode.png' %}">
+                            </div>
+                            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
+                                 aria-labelledby="v-pills-profile-tab">
+                                <img src="{% static 'img/ALiPayQRCode.png' %}">
+                            </div>
+                            <!--<div class="tab-pane fade" id="v-pills-messages" role="tabpanel"-->
+                                 <!--aria-labelledby="v-pills-messages-tab">-->
+                                <!--<img src="img/ALiPayQRCode.png" width="200">-->
+                            <!--</div>-->
+                            <!--<div class="tab-pane fade" id="v-pills-settings" role="tabpanel"-->
+                                 <!--aria-labelledby="v-pills-settings-tab">-->
+                                <!--<img src="img/ALiPayQRCode.png" width="200">-->
+                            <!--</div>-->
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <span>欢迎捐助<br>为社区发展贡献一份力</span>
+                    </div>
                 </div>
             </div>
+
+
+            <!--<div class="donate row">-->
+                <!--<div class="col-6">-->
+                    <!--<img src="img/ALiPayQRCode.png">-->
+                <!--</div>-->
+                <!--<div class="col-6 wrapper">-->
+                    <!--<span>欢迎捐助<br>为社区发展贡献一份力</span>-->
+                <!--</div>-->
+            <!--</div>-->
 
 
         </div>
-        <div class="info">
+        <div class="info float-right col-4">
             <div class="dynamic">
                 <h3>动态</h3>
                 <ul>
