--- a/templates/list.html
+++ b/templates/list.html
@@ -15,7 +15,7 @@
 <div class="header">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Django 中文社区</a>
+            <a class="navbar-brand" href="/">Django 中文社区</a>
         </div>
     </div>
 </div>
