--- a/apps/home/static/css/custom.css
+++ b/apps/home/static/css/custom.css
@@ -121,7 +121,7 @@ a:hover {
     margin: 0 auto 100px;
 }
 
-.main .donate img {
+.donate img {
     /*width: 80%;*/
     min-width: 200px;
     max-width: 200px;
@@ -172,14 +172,17 @@ a:hover {
     padding: 0;
     margin: 0;
     padding-left: 20px;
-    /*list-style-type: none;*/
     list-style-type: disc;
     font-size: 18px;
     padding-bottom: 20px;
 }
 
+.homepage .info .support ul{
+    list-style-type: disc;
+}
+
 .info ul li {
-    display: list-item;
+    /*display: list-item;*/
     padding-bottom: 5px;
 }
 
@@ -239,4 +242,23 @@ a:hover {
     display: block;
     max-width: 100%;
     height: auto;
+}
+
+/*支持页*/
+.supportpage{
+    min-width: 1400px;
+}
+
+.supportpage .main {
+    border-right: 1px solid #ddd;
+    padding-left: 0;
+    padding-right: 4%;
+}
+.supportpage li{
+    list-style: none;
+}
+.supportpage .donate-info{
+    display: block;
+    margin-top: 36px;
+    margin-left: 0;
 }
