:beers: change urls

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
                     {% endfor %}
 
                 </ul>
-                <a href="{% url 'home:list'%}" target="_blank">查看全部>>></a>
+                <a href="{% url 'home:posts'%}" target="_blank">查看全部>>></a>
             </div>
             <div class="support">
                 <h3>捐助信息</h3>
