add donation images

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,11 +57,11 @@
                         <div class="tab-content" id="v-pills-tabContent">
                             <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                                  aria-labelledby="v-pills-home-tab">
-                                <img src="{% static 'img/WeChatQRCode.png' %}">
+                                <img src="{% static 'img/wx.jpg' %}">
                             </div>
                             <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
                                  aria-labelledby="v-pills-profile-tab">
-                                <img src="{% static 'img/ALiPayQRCode.png' %}">
+                                <img src="{% static 'img/zhifubao.jpg' %}">
                             </div>
                             <!--<div class="tab-pane fade" id="v-pills-messages" role="tabpanel"-->
                                  <!--aria-labelledby="v-pills-messages-tab">-->
