--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     {% load staticfiles %}
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Django 中文社区</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -39,21 +39,8 @@
             </p>
 
             <div class="donate">
-                <div class="row">
-                    <div class="col-3">
-                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
-                             aria-orientation="vertical">
-                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
-                               role="tab" aria-controls="v-pills-home" aria-selected="true">微信</a>
-                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
-                               role="tab" aria-controls="v-pills-profile" aria-selected="false">支付宝</a>
-                            <!--<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages"-->
-                               <!--role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>-->
-                            <!--<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings"-->
-                               <!--role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>-->
-                        </div>
-                    </div>
-                    <div class="col-6">
+                <div>
+                    <div>
                         <div class="tab-content" id="v-pills-tabContent">
                             <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                                  aria-labelledby="v-pills-home-tab">
@@ -73,7 +60,19 @@
                             <!--</div>-->
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div>
+                        <div class="nav pay-type flex-column nav-pills" id="v-pills-tab" role="tablist">
+                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
+                               role="tab" aria-controls="v-pills-home" aria-selected="true">微信</a>
+                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
+                               role="tab" aria-controls="v-pills-profile" aria-selected="false">支付宝</a>
+                            <!--<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages"-->
+                               <!--role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>-->
+                            <!--<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings"-->
+                               <!--role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>-->
+                        </div>
+                    </div>
+                    <div>
                         <span>欢迎捐助<br>为社区发展贡献一份力</span>
                     </div>
                 </div>
@@ -132,39 +131,7 @@
 </div>
 <!--Footer-->
 <footer class="page-footer font-small blue pt-4 mt-4">
-
-    <!--Footer-->
-    <div class="container-fluid text-center text-md-left text-xl-left">
-        <div class="row">
-
-
-            <div class="col-md-6 col-xl-6 text-md-left text-xl-left text-sm-left">
-                <h5 class="text-uppercase">Django 中文社区</h5>
-            </div>
-
-            <div class="col-md-6 col-xl-6">
-                <!--<h5 class="text-uppercase">Links</h5>-->
-                <!--<ul class="list-unstyled">-->
-                <!--<li><a href="#!">Link 1</a></li>-->
-                <!--<li><a href="#!">Link 2</a></li>-->
-                <!--<li><a href="#!">Link 3</a></li>-->
-                <!--<li><a href="#!">Link 4</a></li>-->
-                <!--</ul>-->
-            </div>
-
-        </div>
-    </div>
-    <!--/.Footer Links-->
-
-    <!--Copyright-->
-    <!--<div class="footer-copyright py-3 text-center">-->
-    <!--<div class="container-fluid">-->
-    <!--© 2015 Copyright: <a href=""></a>-->
-
-    <!--</div>-->
-    <!--</div>-->
-    <!--/.Copyright-->
-
+    <h5 class="text-uppercase footer-title">Django 中文社区</h5>
 </footer>
 <!--/.Footer-->
 
