:beers: change support model index and add total money

--- a/templates/support.html
+++ b/templates/support.html
@@ -52,6 +52,9 @@
                   <td colspan="5">暂无捐款信息！</td>
                 </tr>
                 {% endfor %}
+                <tr>
+                <td colspan="5">总计{{ sum_money }}元</td>
+                </tr>
                 </tbody>
             </table>
 
