--- a/templates/users/account/email_confirm.html
+++ b/templates/users/account/email_confirm.html
@@ -1,4 +1,8 @@
+{% extends "account/base.html" %}
+
+{% load bootstrap %}
 {% load i18n %}
+{% load account %}
 
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
@@ -7,6 +11,8 @@
 <h1>{% trans "Confirm E-mail Address" %}</h1>
 
 {% if confirmation %}
+
+{% user_display confirmation.email_address.user as user_display %}
 
 <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
