--- a/templates/users/account/password_reset.html
+++ b/templates/users/account/password_reset.html
@@ -7,19 +7,28 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-8 offset-2">
+      <div class="card bg-light">
+        <div class="card-header">
+          {% trans "Password Reset" %}
+        </div>
+        <div class="card-body">
+            {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|bootstrap_horizontal }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                {% csrf_token %}
+                {{ form|bootstrap_horizontal }}
+                <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
+            </form>
+            <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
