--- a/templates/users/account/password_change.html
+++ b/templates/users/account/password_change.html
@@ -6,11 +6,22 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form|bootstrap_horizontal }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col-8 offset-2">
+      <div class="card bg-light">
+        <div class="card-header">
+          {% trans "Change Password" %}
+        </div>
+        <div class="card-body">
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                {% csrf_token %}
+                {{ form|bootstrap_horizontal }}
+                <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
