--- a/templates/users/account/password_set.html
+++ b/templates/users/account/password_set.html
@@ -6,11 +6,22 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form|bootstrap_horizontal }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col-8 offset-2">
+      <div class="card bg-light">
+        <div class="card-header">
+          {% trans "Set Password" %}
+        </div>
+        <div class="card-body">
+            <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                {% csrf_token %}
+                {{ form|bootstrap_horizontal }}
+                <input class="btn btn-primary" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
